--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ body {
     font-size: 26px;
     line-height: 1.19;
     color: #000000; 
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25); */
     margin-right: 93px;
 }
 
@@ -78,6 +78,8 @@ body {
 
 .header-list {
     display: flex;
+    align-items: center;
+    
 }
 
 .header-item:not(:last-child) {
@@ -85,7 +87,10 @@ body {
 }
 
 .header-contacts {
+    margin: 0;
     margin-left: auto;
+    display: flex;
+    
 }
 
 .header-link {
@@ -93,6 +98,7 @@ body {
     font-size: 14px;
     line-height: 1.14;
     color: var(--header-color); 
+    
 }
 
 .header-link:hover, 
@@ -104,7 +110,11 @@ body {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;  
-    color: var(--second-title-color);    
+    color: var(--second-title-color);
+    display: flex;
+    align-items: center;
+    
+         
 }
 
 .header-mail:hover,
@@ -119,16 +129,41 @@ body {
     letter-spacing: 0.02em;
     color: var(--second-title-color);
     margin-left: 50px;
+    display: flex;
+    align-items: center;
+    
 }
 
 .header-tel:hover,
-.header-tellipse {
+.header-tel:focus {
     color: #2196F3;
 }
 
+.header-mail-icon {
+    margin-right: 10px;
+    fill: currentColor;
+   
+    
+}
+.header-tel-icon {
+    margin-right: 10px;
+    fill: currentColor;
+  
+    
+    
+}
 /*----------main----------*/
 .main {
+    /* max-width: 1600px;
+    min-height: 600px; */
     background-color: #2F303A;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+    ), url(../images/main-img.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -165,7 +200,8 @@ body {
     height: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    align-items: center;  
+    align-items: center;
+    border: 0;  
 }
 
 /*----------pproperties----------*/
@@ -205,6 +241,16 @@ body {
     margin-right: 30px;  
 }
 
+.properties-icon {
+    width: 270px;
+    height: 120px;
+    display: flex;
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background-color: #F5F4FA;
+}
 /*----------work----------*/
 
 .work {
@@ -238,6 +284,9 @@ body {
   
     padding-top: var(--typical-padding);
     padding-bottom: var(--typical-padding);
+    background-color: #F5F4FA;
+    /* max-width: 1600px;
+    min-height: 600px; */
 }
 
 .team-first-title {
@@ -271,6 +320,7 @@ body {
     letter-spacing: 0.03em;
     color: var(--second-title-color);
     text-align: center;
+    margin-bottom: 16px;
 }
 
 .team-description {
@@ -282,6 +332,116 @@ body {
 .team-item + .team-item {
     margin-left: 30px;
 }
+.team-item {
+    background-color: var(--main-title-color);
+    padding-bottom: 30px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 0px 0px 4px 4px;
+}
+.team-soc-list {
+    display: flex;
+    justify-content: center;
+}
+
+.team-soc-item {
+    width: 44px;
+    height: 44px;
+    margin-left: 10px;
+}
+.team-soc-item:first-child {
+    margin-left: 0;
+}
+
+.team-soc-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    cursor: pointer;
+
+}
+
+.team-soc-icon {
+    fill: #AFB1B8;
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+    
+    background-color: #2196F3;
+}
+.team-soc-link:hover .team-soc-icon,
+.team-soc-link:focus .team-soc-icon{
+    fill: #FFFFFF;
+    background-color: #2196F3;
+}
+/*----------clients----------*/
+
+.clients {
+    padding-top: var(--typical-padding);
+    padding-bottom: var(--typical-padding);
+}
+
+.clients-first-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--header-color);
+    margin-bottom: 50px;
+}
+
+
+.clients-list {
+    display: flex;
+    justify-content: center;
+}
+
+.clients-item {
+    width: 170px;
+    height: 92px;
+    margin-left: 30px;
+    
+    
+}
+
+.clients-item:first-child {
+    margin-left: 0;
+}
+
+.clients-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 92px;
+    
+    background-color: var(--main-title-color);
+    fill:#AFB1B8;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+
+}
+
+.clients-icon {
+    fill: #ffffff;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+    border-color: #2196F3;
+    fill: #2196F3;
+}
+
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
+    border-color: #2196F3;
+    fill: #2196F3;
+}
+
 
 /*----------footer----------*/
 
@@ -289,7 +449,14 @@ body {
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
+    display: flex;
 }
+
+.footer .container {
+    display: flex;
+    align-items: center;
+}
+
 
 .footer-logo {
     font-family: 'Raleway';
@@ -313,6 +480,8 @@ body {
 
 .contacts {
     margin-top: 20px;
+    margin-right: 70px;
+    
 }
 
 .contacts-item-link {
@@ -322,6 +491,10 @@ body {
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
+.contacts-mail{
+    margin-top: 9px;
+
+}
 
 .contacts-mail-link {
     font-style: normal;
@@ -329,7 +502,12 @@ body {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    margin-top: 9px; 
+    
+}
+
+.contacts-tel {
+    margin-top: 9px;
+
 }
 
 .contacts-tel-link {
@@ -338,7 +516,7 @@ body {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    margin-top: 9px; 
+    
 }
 
   .contacts-item-link:hover,
@@ -356,10 +534,70 @@ body {
       color: #2196F3;
   }
 
+.footer-soc {
+    padding-top: 72px;
+    padding-bottom: 100px;
+}
+
+.footer-soc-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-title-color);
+    margin-bottom: 20px;
+}
+.footer-soc-list {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-soc-item {
+    width: 44px;
+    height: 44px;
+    margin-left: 10px;
+}
+
+.footer-soc-item:first-child {
+    margin-left: 0;
+}
+
+.footer-soc-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.1)
+    
+
+}
+
+.footer-soc-icon {
+    fill: #FFFFFF;
+    
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+
+    background-color: #2196F3;
+}
+
+.footer-soc-link:hover .footer-soc-icon,
+.footer-soc-link:focus .footer-soc-icon {
+    fill: #FFFFFF;
+    background-color: #2196F3;
+}
+
 
   /*----------PORTFOLIO----------*/
-  .portfolio {
-      
+
+    .portfolio {
       padding-top: var(--typical-padding);
       padding-bottom: var(--typical-padding);
   }
@@ -381,15 +619,21 @@ body {
         font-size: 16px;
         line-height: 1.62;
         letter-spacing: 0.03em;
+        background-color: #F5F4FA;
         color: #212121;
         cursor: pointer;
         padding: 6px 22px 6px 22px;
+        border-radius: 4px;
+        border: 0;
     }
 
     .portfolio-filter-btn:hover,
     .portfolio-filter-btn:focus {
         background-color: #2196F3;
         color: #FFFFFF;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
     }
 
     .projects-list  {
@@ -406,7 +650,16 @@ body {
         margin-left: 30px;
         margin-top: 30px;
         max-width: 370px;   
+        cursor: pointer;
     }
+    .project-item:hover,
+    .project-item:hover {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+
+
 
      .project-title {
     font-style: normal;
